--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
-    "rollup": "^2.79.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "rollup": "^2.79.1"
   },
   "keywords": [
     "analytics",
