--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "minify": "terser web/moveo-one.min.js -c -m -o web/moveo-one-script.min.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "jest": "^29.0.0",
-    "rollup": "^2.79.1"
+    "rollup": "^2.79.1",
+    "terser": "^5.24.0"
   },
   "keywords": [
     "analytics",
